# School-C-and-C-Assignments

PeterVaughan_CProgrammingFinalProject/: Assignment.docx  README.txt
PeterVaughan_CProgrammingFinalProject/Code/: book.h  book_management_system  books.c  main.c  makefile
PeterVaughan_PROG2100_Assignment2_Part2_ATMmachines/: CMakeLists.txt  ReadMe.txt  createAccount.h  login.h  main.cpp  printIntroMenu.h  printMainMenu.h  start.h  testing.h  wipeData.h
PeterVaughan_PROG2100_Assignment2_Part2_ATMmachines/documents/: PROG 2100 - Assignment2B.docx  PeterVaughan_PROG2100_Assignment2B_Output_ATM.docx..docx
